[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/WallSwitch/wallSwitch.png" type="Texture" id=1]
[ext_resource path="res://Interactables/Puzzles/CopaPuzzle/microondaspainel.png" type="Texture" id=2]
[ext_resource path="res://Interactables/Puzzles/CopaPuzzle/PainelMicroondas.gd" type="Script" id=3]
[ext_resource path="res://Interactables/Puzzles/CopaPuzzle/Micro.gd" type="Script" id=4]

[node name="PainelMicroondas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0627451, 0.152941, 0.235294, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 4.0
margin_right = 26.0
margin_bottom = 22.0
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Numero1" type="Label" parent="Control"]
margin_left = 116.0
margin_top = 46.0
margin_right = 124.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
text = "0"
align = 1
valign = 1

[node name="Numero2" type="Label" parent="Control"]
margin_left = 135.0
margin_top = 48.0
margin_right = 143.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
text = "0"
align = 1
valign = 1

[node name="Numero3" type="Label" parent="Control"]
margin_left = 158.0
margin_top = 48.0
margin_right = 165.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="Numero4" type="Label" parent="Control"]
margin_left = 175.0
margin_top = 48.0
margin_right = 182.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="Proximo" type="Label" parent="Control"]
margin_left = -28.0
margin_top = 45.0
margin_right = -21.0
margin_bottom = 53.0
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="GridContainer" type="GridContainer" parent="Control"]
margin_left = 112.0
margin_top = 73.0
margin_right = 194.0
margin_bottom = 135.0
mouse_default_cursor_shape = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
__meta__ = {
"_edit_group_": true
}

[node name="Botao1" type="Button" parent="Control/GridContainer"]
margin_right = 28.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Botao2" type="Button" parent="Control/GridContainer"]
margin_left = 28.0
margin_right = 55.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Botao3" type="Button" parent="Control/GridContainer"]
margin_left = 55.0
margin_right = 82.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Botao4" type="Button" parent="Control/GridContainer"]
margin_top = 21.0
margin_right = 28.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Botao5" type="Button" parent="Control/GridContainer"]
margin_left = 28.0
margin_top = 21.0
margin_right = 55.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Botao6" type="Button" parent="Control/GridContainer"]
margin_left = 55.0
margin_top = 21.0
margin_right = 82.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Botao7" type="Button" parent="Control/GridContainer"]
margin_top = 42.0
margin_right = 28.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Botao8" type="Button" parent="Control/GridContainer"]
margin_left = 28.0
margin_top = 42.0
margin_right = 55.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Botao9" type="Button" parent="Control/GridContainer"]
margin_left = 55.0
margin_top = 42.0
margin_right = 82.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="BotaoEnter" type="Button" parent="Control"]
margin_left = 138.0
margin_top = 136.0
margin_right = 169.364
margin_bottom = 150.0
text = "Abrir"

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="pressed" from="Control/GridContainer/Botao1" to="Control" method="_on_Botao1_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao2" to="Control" method="_on_Botao2_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao3" to="Control" method="_on_Botao3_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao4" to="Control" method="_on_Botao4_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao5" to="Control" method="_on_Botao5_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao6" to="Control" method="_on_Botao6_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao7" to="Control" method="_on_Botao7_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao8" to="Control" method="_on_Botao8_pressed"]
[connection signal="pressed" from="Control/GridContainer/Botao9" to="Control" method="_on_Botao9_pressed"]
[connection signal="pressed" from="Control/BotaoEnter" to="Control" method="_on_BotaoEnter_pressed"]
